--- a/base/default.cfg
+++ b/base/default.cfg
@@ -8,6 +8,7 @@ bind a "+left"
 bind b "gametypemenu
 bind d "+right"
 bind g "drop"
+bind r "+reload"
 bind s "+back"
 bind t "messagemode"
 bind w "+forward"
